css/styles.css
@font-face {
    src: url(fonts/overpass-regular.otf);
    font-family: overpass;
}
@font-face {
    src: url(fonts/overpass-extrabold.otf);
    font-family: overpass;
    font-weight: bold;
}

.page {
    font-size: 20px;
    color: rgb(85, 85, 85);
    font-family: overpass;
}
.container {
    width: 1000px;
    height: 100vh;
    background-color: white;
    margin: 0 auto;
}
h2 {
    margin-bottom: 0px;
}
p {
    margin-top: 0px;
}
.row {
    width: 100%;
    margin-bottom: 20px;
}
.header {
    text-align: center;
    background-color: gainsboro;
    padding: 40px;
}
.mid {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
.mid-box {
    min-height: 200px;
    width: 45%;
    background-color: gainsboro;
    padding: 20px;
}
.footer-container {
    background-color: gainsboro;
}
.footer-items {
    padding-bottom: 15px;
    padding-top: 15px;
    min-height: 200px;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}
.footer-box {
    min-height: 98%;
    width: 27%;
    padding: 20px;
    background-color: rgb(173, 173, 173);
}

@media only screen and (max-width: 600px) {
    .page {
        color:rgb(153, 19, 146);
        background-color: rgb(255, 157, 247);
        font-family: "Comic Sans MS", sans-serif;
    }

    .container {
        background-color: rgb(255, 157, 247);
        width: 100%;
        height: 200vh;
    }
    .footer-container {
        background-color: rgb(219, 140, 250);
    }
    .footer-box {
        margin-bottom: 15px;
        width:auto;
        background-color: rgb(201, 112, 236);
    }

    .footer-items {
        display: inline;
        background-color: rgb(201, 112, 236);
    }
    
    .header {
        background-color: rgb(219, 140, 250);
    }
    .mid-box {
        background-color: rgb(219, 140, 250);
        width: 40%;
    }
}

@media only screen and (max-width: 1024px) {
    .page {
        font-family: "Comic Sans MS", sans-serif;
    }
}

